# ulysses-fetcher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
buscador/: __init__.py  __main__.py  decompress.py  default_uris.json  download_models.py  download_resources.py  integrity.py
buscador/trusted_urls/: models.json  probing_datasets.json  quantization.json  senteval_datasets.json
tests/: test_download_models.py  test_errors_and_warnings.py
