[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "buscador"
version = "1.2.1"
description = "Buscador de conjuntos de dados e modelos pré-treinados para o projeto Ulysses."
authors = [
	{name="felsiq", email= "felipe.siqueira@usp.br"}
]

requires-python = ">=3.7"

dependencies = [
	"tqdm >= 4.64.0",
]

[project.optional-dependencies]
codestyle = [
	"black >= 22.1.0",
]

test = [
	"tox >= 3.24.5",
	"mypy >= 0.942",
	"pylint >= 2.13.5",
	"pytest >= 7.1.0",
	"pytest-cov >= 3.0.0",
	"pytest-html >= 3.1.1",
	"pytest-socket >= 0.5.1",
]

doc = [
	"grip >= 4.6.0",
]

[tool.mypy]
ignore_missing_imports = true
strict_equality = true
show_error_codes = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
warn_redundant_casts = true
warn_incomplete_stub = true
non_interactive = true
install_types = true

[tool.pytest.ini_options]
addopts = """
	--cov=buscador
	--failed-first
	--new-first
	--cov-report=html
"""
testpaths = [
	"tests",
]

[tool.pylint.messages_control]
jobs = 4
disable = """
	too-few-public-methods,
	too-many-locals,
	too-many-arguments,
	too-many-statements,
	too-many-branches,
	import-outside-toplevel
"""
min-similarity-lines=10

[tool.black]
line-length=100

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37, py310, mypy, pylint
isolated_build = true

[gh-actions]
python =
    3.7: py37, mypy, pylint
    3.10: py310

[testenv]
whitelist_externals = flit
commands =
	pip install '.[test]'
	python -m pytest

[testenv:mypy]
basepython = python3.7
deps = mypy
commands =
	python -m mypy --install-types --non-interactive buscador/
	python -m mypy buscador/

[testenv:pylint]
basepython = python3.7
deps =
	pylint
	pytest
	pytest_socket
commands =
	python -m pylint --disable='missing-function-docstring' tests/
	python -m pylint buscador/
"""
